--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.5",
@@ -29,6 +30,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "pg": "^8.2.1",
+    "typeorm": "^0.2.25",
     "uuidv4": "^6.0.7"
   }
 }
