Convert data local to typeOrm with postgresql

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,6 +6,9 @@
   "password":"fg2020",
   "database":"gostack_",
   "schema":"transaction",
+  "entities": [
+    "./src/models/*.ts"
+  ],
   "migrations":[
     "./src/database/migrations/*.ts"
   ],
