--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,10 +19,12 @@ jobs:
         node-version: [12.16.3]
 
     steps:
-    - uses: actions/checkout@v2
-    - run: npm install
+    - uses: Enable postgres for unit test
+    - run: docker-compose up -d
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm install
+    - run: npm run typeorm migration:run
     - run: npm test
